--- a/edurov_server/electron/package.json
+++ b/edurov_server/electron/package.json
@@ -1,24 +1,31 @@
 {
-    "name": "edurov-control",
-    "version": "1.0.0",
-    "description": "An application to control an EduROV educational underwater ROV",
-    "main": "main.js",
-    "scripts": {
-      "start": "electron ."
-    },
-    "repository": "https://github.com/simtind/edu-rover2",
-    "keywords": [
-      "Electron",
-      "educational",
-      "robotics",
-      "underwater",
-      "rov"
-    ],
-    "author": "EduROV",
-    "license": "GPL-3.0",
-    "devDependencies": {
-      "electron": "^13.1.5",
-      "gamepad.js": "^1.0.4",
-      "websocket": "^1.0.34"
-    }
-  }
+  "name": "edurov-control",
+  "version": "1.0.0",
+  "description": "An application to control an EduROV educational underwater ROV",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/simtind/edu-rover2.git"
+  },
+  "keywords": [
+    "Electron",
+    "educational",
+    "robotics",
+    "underwater",
+    "rov"
+  ],
+  "author": "EduROV",
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "electron": "^13.1.5",
+    "gamepad.js": "^1.0.4",
+    "websocket": "^1.0.34"
+  },
+  "bugs": {
+    "url": "https://github.com/simtind/edu-rover2/issues"
+  },
+  "homepage": "https://github.com/simtind/edu-rover2#readme"
+}
