--- a/edurov_server/electron/package.json
+++ b/edurov_server/electron/package.json
@@ -21,8 +21,8 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "electron": "^13.1.5",
-    "gamepad.js": "^1.0.4",
-    "websocket": "^1.0.34"
+    "ping": "^0.4.1",
+    "ws": "^7.5.2"
   },
   "bugs": {
     "url": "https://github.com/simtind/edu-rover2/issues"
